# PC-ALE

./: BUILD_REPORT.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
docs/: API_REFERENCE.md  AQC_ALE_RESEARCH.md  ARCHITECTURE.md  BARE_METAL_IMPLEMENTATION_PLAN.md  COMPLETION_SUMMARY.md  FS1052_IMPLEMENTATION.md  GLOSSARY.md  INTEGRATION_GUIDE.md  LINUX_DRAWS_IMPLEMENTATION.md  MIL_STD_COMPLIANCE.md  PHASE1.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  STANAG_5066.md  TESTING.md
examples/: example_ale_decoder.cpp  example_aqc_usage.cpp  example_complete_stack.cpp  example_fs1052_transfer.cpp  usage.cpp
include/: ale_message.h  ale_state_machine.h  ale_types.h  ale_word.h  aqc_protocol.h  fft_demodulator.h  fs1052_arq.h  fs1052_protocol.h  golay.h  symbol_decoder.h  tone_generator.h
include/ale/: lqa_analyzer.h  lqa_database.h  lqa_metrics.h
src/: lqa_analyzer.cpp  lqa_database.cpp  lqa_metrics.cpp
src/core/: types.cpp
src/fec/: golay.cpp
src/fs1052/: frame_format.cpp  fs1052_arq.cpp
src/fsk/: fft_demodulator.cpp  symbol_decoder.cpp  tone_generator.cpp
src/link/: ale_state_machine.cpp
src/protocol/: ale_message.cpp  ale_word.cpp  aqc_parser.cpp
tests/: debug_fft.cpp  test_aqc_crc.cpp  test_aqc_parser.cpp  test_fs1052_arq.cpp  test_fs1052_frames.cpp  test_fsk_core.cpp  test_lqa_analyzer.cpp  test_lqa_database.cpp  test_lqa_metrics.cpp  test_protocol.cpp  test_state_machine.cpp
